New Crowdin updates (#157)
* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* Update source file en_US.json

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* Update source file en_US.json

* New translations en_us.json (Korean)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* Update source file en_US.json

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, Brazilian)

* New translations en_us.json (Chinese Simplified)

* New translations en_us.json (Korean)

* Update source file en_US.json

* New translations en_us.json (Russian)

* Update source file en_US.json

* New translations en_us.json (Russian)

* New translations en_us.json (Portuguese, 

--- a/Resources/Lang/pt_BR.json
+++ b/Resources/Lang/pt_BR.json
@@ -1787,6 +1787,22 @@
   "DeathReason.Consumed": "Consumido",
   "DeathReason.BadLuck": "Má Sorte",
   "DeathReason.Asthma": "Asma",
+  "DeathReason.Assumed": "Assumido",
+  "DeathReason.Negotiation": "Negociado",
+  "DeathReason.Meteor": "Chuva de Meteoros",
+  "DeathReason.Lava": "Lava",
+  "DeathReason.Tornado": "Tornado",
+  "DeathReason.Lightning": "Quantificador",
+  "DeathReason.Drowned": "Afogado",
+  "DeathReason.Sunken": "Submerso",
+  "DeathReason.Collapsed": "Colapso",
+  "ND_DRLaughMessage.Meteor": "Meteoro.... Eu mal a conheci!",
+  "ND_DRLaughMessage.Lava": "A lava não é o melhor lugar para nadar, hein?",
+  "ND_DRLaughMessage.Tornado": "Saiu para dar uma volta? Espero que esse tornado não te deixou tonto!",
+  "ND_DRLaughMessage.Lightning": "Você foi.... TROVEJADO!",
+  "ND_DRLaughMessage.Drowned": "Você disse que estava com sede, certo? Aqui está um pouco de água!",
+  "ND_DRLaughMessage.Sunken": "Você sabia que o Titanic foi afundado por um buraco? Bem, agora você sabe!",
+  "ND_DRLaughMessage.Collapsed": "Foi como nos filmes, certo? Sabe, quando o prédio cai e todo mundo morre!",
   "Alive": "Vivo",
   "Win": " Vence!",
   "Last-": "Último ",
@@ -2209,6 +2225,10 @@
   "CommandDescription.Decree": "Use um decreto como Presidente",
   "CommandDescription.AddVIP": "Adiciona um jogador à lista VIP",
   "CommandDescription.DeleteVIP": "Remove um jogador da lista VIP",
+  "CommandDescription.Assume": "Assuma quantos votos um jogador irá receber como Assumista",
+  "CommandDescription.Note": "Gerencie suas notas como o Jornalista",
+  "CommandDescription.OS": "Defina a chance de aparecimento de uma função",
+  "CommandDescription.Negotiation": "Escolha seu método de negociação quando solicitado pelo Negociador",
   "CommandArgs.ChangeSetting.Name": "A configuração para mudar (deixe em branco para ver todas as configurações)",
   "CommandArgs.ChangeSetting.UnknownValue": "(deixe em branco para ver o que colocar aqui)",
   "CommandArgs.Rename.Name": "Seu novo nome",
@@ -2264,6 +2284,13 @@
   "CommandArgs.Decree.Number": "0/1/2/3/4/5 (deixe em branco para ver todos os decretos)",
   "CommandArgs.AddVIP.Id": "ID do jogador para adicionar à lista VIP",
   "CommandArgs.DeleteVIP.Id": "ID do jogador para remover da lista VIP",
+  "CommandArgs.Assume.Id": "O ID do jogador para assumir os votos",
+  "CommandArgs.Assume.Number": "O número de votos para assumir",
+  "CommandArgs.Note.Action": "adicionar/remover/limpar/ver",
+  "CommandArgs.Note.UnknownValue": "A nota a ser adicionada, o índice da nota a ser removida ou em branco.",
+  "CommandArgs.OS.Chance": "A chance de aparecer para a função",
+  "CommandArgs.OS.Role": "A função para definir a chance de aparecer para",
+  "CommandArgs.Negotiation.Number": "O índice do método de negociação escolhido (0/1/2/3)",
   "Commands.ChangeSettingHelp": "<b><u>Argumentos:</u></b><size=70%>\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\n- impostors (número)\n- players (número)\n- recommended (on/off)\n- confirmejects (on/off)\n- emergencymeetings (número)\n- anonymousvotes (on/off)\n- emergencycooldown (número)\n- discussiontime (número)\n- votingtime (número)\n- playerspeed (valor)\n- crewmatevision (valor)\n- impostorvision (valor)\n- killcooldown (número)\n- killdistance (short/medium/long/custom)\n- taskbarupdates (always/meetings/never)\n- visualtasks (on/off)\n- commontasks (número)\n- longtasks (número)\n- shorttasks (número)\n- scientistcount (número)\n- scientistchance (chance)\n- vitalsdisplaycooldown (número)\n- batteryduration (número)\n- engineercount (número)\n- engineerchance (chance)\n- ventusecooldown (número)\n- maxtimeinvents (número)\n- guardianangelcount (número)\n- guardianangelchance (chance)\n- protectcooldown (número)\n- protectduration (número)\n- protectvisibletoimpostors (on/off)\n- shapeshiftercount (número)\n- shapeshifterchance (chance)\n- shapeshiftduration (número)\n- shapeshiftcooldown (número)\n- leaveshapeshiftevidence (on/off)\n- phantomcount (número)\n- phantomchance (chance)\n- inviscooldown (número)\n- invisduration (número)\n- noisemakercount (número)\n- noisemakerchance (chance)\n- noisemakerimpostoralert (on/off)\n- noisemakeralertduration (número)\n- trackercount (número)\n- trackerchance (chance)\n- trackduration (número)\n- trackcooldown (número)\n- trackdelay (número)\n- ghostdotasks (on/off)\n\n<u><b>Notas:</b></u>\n1. Letras maiusculas e minusicular importam\n2. Onde a configuração houver um custom, você obviamente deve colocar um número após o custom\n3. onde um argumentos for valor, você deve colocar um número no formato float, como por exemplo, 1.7\n4. \\\"ghostdotasks\\\" causa alguns problemas caso definido por comando\n5. Exemplos de uso:\n   - \\\"/cs map polus\\\"\n   - \\\"/cs killdistance custom 4\\\"\n   - \\\"/cs trackdelay 1,7\\\"\n   - \\\"/cs confirmejects on\\\"",
   "PollResultTitle": "Resultados da Votação",
   "Poll.Title": "<color=#ff0000>【★ ENQUETE ★】</color>",
@@ -2944,6 +2971,9 @@
   "WhispererInfo.Role": "Eu estava {0}",
   "WhispererInfo.KillerRole": "Meu assassino era {0}",
   "WhispererQuestioning": "Perguntando {0}... {1}%",
+  "Hypnotist": "Hipnotizador",
+  "HypnotistInfo": "Impeça reportes de corpos",
+  "HypnotistInfoLong": "(Impostores):\\nComo Hipnotizador, você pode evitar que todos os jogadores reportem corpos usando sua habilidade (transfomar/pet).",
   "Altruist": "Altruista",
   "AltruistInfo": "Apague a função do seu assassino",
   "AltruistInfoLong": "(Tripulantes):\nComo Altruísta, se um Impostor te matar, ele perderá suas habilidades e se tornará um Impostor ou Metamorfo Normal.",
@@ -3332,6 +3362,19 @@
   "TornadoDuration": "Duraçaõ do Tornado",
   "TornadoRange": "Alcançe do Tornado",
   "TeleportedByTornado": "\nOh não! Você foi pego por um Tornado,\n e voou pra bem... aqui!",
+  "Deadlined": "Limite",
+  "DeadlinedInfo": "Deve fazer uma tarefa ou matar a cada rodada",
+  "DeadlinedInfoLong": "(Atributos):\\nComo Limite, você deve completar uma tarefa ou matar alguém a cada rodada. Caso falhe em fazer isso, você morrerá. Caso uma reunião for chamada logo após a anterior acabar (o tempo é definido pelo Anfitrião), você não morrerá. Isso não se aplica a primeira rodada.",
+  "Prefix.Deadlined": "Limite",
+  "Deadlined.InactiveTime": "Tempo seguro após reuniões",
+  "Deadlined.MustDoTask": "<size=80%><#ffa500>Você deve completar uma tarefa ou matar antes da próxima reunião</color></size>",
+  "Deadlined.SafeTime": "<size=80%><#00ffa5>Tempo Seguro:</color> <b>{0}</b>s</size>",
+  "Assumer": "Assumista",
+  "AssumerInfo": "Assuma os votos em um jogador",
+  "AssumerInfoLong": "(Impostores):\\nComo Assumista, você pode digitar <b>/assume {id} {número}</b> para assumir que o jogador selecionado (o qual o ID será o que você digitou no primeiro argumento, substituindo '{id}') recebrá exatamente {número} votos (o número digitado no segundo argumento, substituindo '{número}').\\nExemplo: <b>/assume 0 3</b> (assume que o Anfitrião recebrá 3 votos).\\n\\nCaso estiver correto, <u>todos os jogadores</u> que votaram em seu alvo morrerão.",
+  "Assumer.AssumedMessage": "Você está assumindo que {0} irá receber <b>{1}</b> votos",
+  "Assumer.VoteReceiverDies": "Receptor do voto morre em suposição correta",
+  "Assumer.MinPlayersToAssume": "Mínimo de jogadores vivos para supor",
   "Sentinel": "Sentinela",
   "SentinelInfo": "Assuste os Assassinos",
   "SentinelInfoLong": "(Tripulantes):\nComo Sentinela, você pode usar os dutos para começar a patrulhar seus arredores. Enquanto você patrulha, todos os assassinos nesta área serão notificados. Se qualquer assassino tentar matar alguém nesta área enquanto você patrulha, você vai mata-lo ao invés disso. Quando a patrulha terminar, todos os assassinos na área de patrulha irão morrer. Enquanto patrulha, você fica com uma visão mais baixa.",
@@ -3877,6 +3920,18 @@
   "Rogue.Task": "Objetivo: <#ffff00>{0}</color>\nRecompensa: <#00ffa5>{1}</color>",
   "Rogue.TaskCompleted": "<#00ff00>Objetivo completo</color>",
   "Rogue.AllTasksCompleted": "<#00ff00>Todos os objetivos foram completos</color>",
+  "Journalist": "Jornalista",
+  "JournalistInfo": "Escreva notas",
+  "JournalistInfoLong": "(Tripulantes):\\nComo Jornalista, você pode anotar notas. Quando você morrer, todos os jogadores verão suas notas na próxima reunião.\\n\\nComando: <b>/note {add/remove/clear/view} [value]</b><size=80%>\\n- <b>add</b>: Adicionar uma nota especificada em [value]\\n- <b>remove</b>: Remover uma nota. Forneça o índice dela em [value] ou deixe [value] em branco para remover a última nota. Você pode ver os índices de suas notas usando <b>/note view</b>\\n- <b>clear</b>: Limpar todas as notas (deixe [value] em branco)\\n- <b>view</b>: Ver todas as notas e seus índices (deixe [value] em branco)</size>\\n\\n<size=70%>Exemplos de uso:\\n<b>/note add Acho que azul e amarelo são Amantes</b>\\n<b>/note remove 2</b>\\n<b>/note clear</b>\\n<b>/note view</b></size>",
+  "JournalistNotesTitle": "<#fcba03>Notas do Jornalista</color>",
+  "JournalistError.InvalidArgument": "Argumento inválido. Use <b>/note {add/remove/clear/view} [value]</b>",
+  "Journalist.CommandUsage": "Uso: <b>/note {add/remove/clear/view} [value]</b>",
+  "JournalistError.IndexOutOfRange": "Você não forneceu argumentos suficientes.",
+  "JournalistError.ArgumentOutOfRange": "O índice que você forneceu está fora do alcance. Use <b>/note view</b> para ver os índices de suas notas.",
+  "JournalistError.Unknown": "Um erro desconhecido ocorreu.",
+  "Grappler": "Agarrador",
+  "GrapplerInfo": "Evite abates e puxe os jogadores para você",
+  "GrapplerInfoLong": "(Tripulantes):\\nComo Agarrador, você pode prevenir 1 assassinato a cada rodada se tiver um uso de habilidade restante no final da última rodada. A primeira tentativa de assassinato será bloqueada, e o alvo será teleportado para você e não morrerá. Sua habilidade não funciona durante sabotagens.",
   "ModeStandard": "Modo de Jogo: Padrão",
   "FFA": "Matar ou Morrer",
   "ModeFFA": "Modo de Jogo: MOM",
@@ -3942,6 +3997,8 @@
   "HotPotato_Range": "Alcance para passar a Batata Quente",
   "HotPotato_TimeLeftSuffix": "<#00ffa5>Matar em </color>",
   "HotPotato_HoldingNotify": "<#ffff00><size=2>Você está com a Batata Quente! Passe ou morra!</size></color>",
+  "SurvivedTimePrefix": "Sobreviveu",
+  "SurvivedUntilTheEnd": "Até o fim",
   "Potato": "Jogador",
   "PotatoInfo": "EVITE FICAR COM A BATATA QUENTE",
   "PotatoInfoLong": "EVITE FICAR COM A BATATA QUENTE",
@@ -3981,6 +4038,39 @@
   "CTF_PlayerStats": "<#00ffa5>Tempo Total Carregando a Bandeira: <#ffffff>{0}s</color> - Total de Marcações: <#ffffff>{1}</color></color>",
   "CTF_Notify_EnemyTeamRoom": "Um Procurador está em <#00ffa5>{0}</color>",
   "CTF_TeamMemberFallen": "{0} caiu!",
+  "CTF_ButtonText": "PEGAR",
+  "NaturalDisasters": "DESASTRES NATURAIS",
+  "ModeNaturalDisasters": "Modo de Jogo: Desastres Naturais",
+  "ModeDescribe.NaturalDisasters": "No modo de jogo Desastres naturais, o mapa enche de desastres naturais. Você deve sobreviver a todos eles e ser o último jogador vivo para vencer!<size=80%>\\n\\nLista de Desastres Naturais e seus efeitos:</size><size=70%>\\n- Terremoto: O chão treme, aplicando velocidade baixa aos jogadores.\\n- Meteoro: um meteoro cai do céu, matando jogadores em um certo raio.\\n- Erupção Vulcânica: Lava flui de um lugar, matando jogadores.\\n- Tornado: Jogadores são sugados pelo tornado e morrem.\\n- Tempestade: Raios caem fora das salas, matando jogadores acertados por eles.\\n- Tempestade de Areia: Areia voa, aplicando visão baixa aos jogadores.\\n- Tsunami: Uma onda gigante se move em uma certa direção, afogando jogadores no caminho.\\n- Buraco: O chão entra em colapso, matando jogadores em um raio, e matando jogadores que entrarem nesse raio no futuro.\\n- Colapso de Predio: Uma construção da nave entra em colapso, matando todos dentro dela. Jogadores não poderão entrar em salas em colapso no futuro </size>",
+  "ND_DisasterFrequency": "Frequência dos Desastres",
+  "ND_DisasterWarningTime": "Tempo de alerta para um desastre",
+  "ND_Earthquake.DurationOpt": "Duração do Terremoto",
+  "ND_Earthquake.Speed": "Velocidade dos jogadores próximos a terremotos",
+  "ND_VolcanoEruption.FlowStepDelay": "Atraso entre passos do fluxo da lava",
+  "ND_VolcanoEruption.DurationAfterFlowComplete": "Tempo para desaparecer após o fluxo da lava for completo",
+  "ND_Tornado.DurationOpt": "Duraçaõ do Tornado",
+  "ND_Tornado.GoesThroughWalls": "Tornado viaja Através de Muralhas",
+  "ND_Tornado.MovingSpeed": "Velocidade de movimento do Tornado",
+  "ND_Thunderstorm.DurationOpt": "Duração da Tempestade",
+  "ND_Thunderstorm.HitFrequency": "Frequência dos raios",
+  "ND_SandStorm.DurationOpt": "Duração da Tempestade de Areia",
+  "ND_SandStorm.Vision": "Visão dos jogadores dentro de uma tempestade de areia",
+  "ND_Tsunami.MovingSpeed": "Velocidade de movimento do Tsunami",
+  "ND_Earthquake": "Terremoto",
+  "ND_Meteor": "Meteoro",
+  "ND_VolcanoEruption": "Erupção Vulcânica",
+  "ND_Tornado": "Tornado",
+  "ND_Thunderstorm": "Tempestade",
+  "ND_SandStorm": "Tempestade de Areia",
+  "ND_Tsunami": "Tsunami",
+  "ND_Sinkhole": "Buraco",
+  "ND_BuildingCollapse": "Colapso de Construção",
+  "CollapsedBuildings": "<#00ffa5>Edifícios desmoronados:</color> {0}",
+  "OngoingThunderstorm": "<#ffff44>⚠ Tempestade em andamento ⚠</color>",
+  "SurvivalTime": "Sobreviveu {0}s",
+  "NDPlayer": "Desastres Naturais",
+  "NDPlayerInfo": "SOBREVIVA A TODOS OS DISASTRES NATURAIS PARA VENCER",
+  "NDPlayerInfoLong": "SOBREVIVA A TODOS OS DESASTRES NATURAIS PARA VENCER",
   "HideAndSeek": "ESCONDE ESCONDE",
   "ModeHideAndSeek": "Modo de Jogo: Esconde Esconde",
   "ModeDescribe.HideAndSeek": "No modo de jogo Esconde-esconde, os caçadores precisam matar todos os que se escondem, enquanto os que se escondem precisam completar todas as tarefas sem serem mortos para vencer.\nSe o limite de tempo chegar a 0, os que se escondem vencem.\n\nFunções: Esconderijo, Buscador, Raposa, Troll, Jumper, Detector, Jet, Dasher, Localizador, Venter, Agente, Sabota-Tarefas",
@@ -4129,6 +4219,19 @@
   "BanditStealMode": "Modo de Roubo",
   "BanditCanStealBetrayalAddon": "Pode Roubar Atributos Traidores",
   "BanditCanStealImpOnlyAddon": "Pode roubar Atributos somente do <color=#ff1919>Impostor</color>",
+  "Negotiator": "Negociador",
+  "NegotiatorInfo": "Negocie com os Jogadores",
+  "NegotiatorInfoLong": "(Tripulantes):\\nComo Negociador, você pode negociar com alguém votando neles numa reunião. Seu alvo tem que escolher entre suicidar, receber um atributo ruim, receber permanentemente uma baixa visão ou baixa velocidade.\\n\\nSe eles não escolherem, a ação padrão é suicídio. Eles podem usar <b>/neg {index}</b> para escolher.\\nVocê só pode negociar uma vez por reunião. Depois da reunião, você saberá o que o seu alvo escolheu.",
+  "Negotiator.LowVision": "Visão Reduzida",
+  "Negotiator.LowSpeed": "Velocidade Reduzida",
+  "Negotiator.Type.Suicide": "Suicídio",
+  "Negotiator.Type.HarmfulAddon": "Receber um atributo ruim",
+  "Negotiator.Type.LowVision": "Obter uma visão baixa permanente",
+  "Negotiator.Type.LowSpeed": "Obter permanentemente uma baixa velocidade",
+  "Negotiator.FinishNotify": "<#00ffa5>Seu alvo escolheu</color> {0}",
+  "Negotiator.TargetMessage": "<b><u>O Negociador forçou você a escolher uma das seguintes opções (use <b>/neg {index}</b>, substituindo {index} pelo número mostrado antes da opção desejada, por exemplo, <b>/neg 1</b>), ou você morre:</u></b>\\n<size=80%>",
+  "Negotiator.Title": "<#ffff00>⚠ Negociador ⚠</color>",
+  "Negotiator.TargetPickSuccess": "Você escolheu <b>{0}</b>",
   "Commander": "Comandante",
   "CommanderInfo": "Comande sua equipe",
   "CommanderInfoLong": "(Impostores):\nComo o Comandante, você pode alternar entre 6 modos ao usar os dutos/pet. Você pode executar a ação selecionada ao se transformar.\n\n<b><u>Marcar:</u></b> Marca o alvo da sua transformação com uma cor única visível para todos os impostores. Use isso para comandá-los a matar esse jogador!\n\n<b><u>Apito:</u></b> Faz com que todos ou 1 impostor específico<sup>*</sup> venham até você e lhes dá uma seta apontando para você.\n\n<b><u>Matar Qualquer Um:</u></b> Notifica todos ou 1 impostor específico<sup>*</sup> para matar qualquer um.\n\n<b><u>Deixar Jogador Vivo:</u></b> Ao se transformar em um tripulante, você marca esse jogador com uma cor única e texto dizendo aos outros impostores para não matar esse jogador. Ao se transformar em um impostor, diz a esse impostor para não matar ninguém.\n\n<b><u>Não Sabotar:</u></b> Notifica todos os impostores para não chamar qualquer sabotagem.\n\n<b><u>Usar Habilidade:</u></b> Notifica todos ou 1 impostor específico<sup>*</sup> para usar sua habilidade.\n\n<size=60%><sup>*</sup> Se você se transformar em um impostor, a ação será executada especificamente e somente sobre ele.</size></size>",
@@ -4268,6 +4371,14 @@
   "RouleteGrandeurInfo": "Jogue Roleta Russa",
   "RouleteGrandeurInfoLong": "(Neutros):\nComo o Grandeador da Roleta, você pode jogar a Roleta Russa para reduzir o tempo de recarga de abate após o próximo abate que você fizer. Use os dutos para alternar entre a quantidade de risco (balas) que você colocou. Existem 5 slots. Se você acertar uma bala, você morre. Se você sobreviver, seu tempo de recarga de abate será permanentemente reduzido em um valor definido <i>multiplicado pelo risco (balas) que você colocou em</i>! Sabote ou use o pet para jogar uma rodada com o fator de risco escolhido.",
   "KCDReduction": "Redução da recarga de abate (multiplicado pelo número de balas colocadas)",
+  "Tank": "Tanque",
+  "TankInfo": "Dute em todos os dutos",
+  "TankInfoLong": "(Neutros):\\nComo o Tanque, você deve dutar em todos os dutos do mapa. Se você conseguir fazer isso antes do final do jogo, você vence com a equipe vencedora no final. Caso contrário, você perde. Sua velocidade é significativamente menor que os outros.",
+  "GuessTank": "De acordo com as configurações do Anfitrião, o Tanque não pode ser adivinhado.",
+  "Tank.Speed": "Velocidade de Movimento",
+  "Tank.CanBeGuessed": "Pode ser adivinhado",
+  "Tank.CanBeKilled": "Pode ser morto",
+  "Tank.Suffix": "<size=80%><#00ffa5>Um duto aleatório que você ainda não entrou:</color> {0}</size>",
   "RG.Hit": "<#ff00>O ataque pousou em uma das suas balas!\nMais sorte da próxima vez!</color>",
   "RG.NoHit": "<#00ffa5>Você sobreviveu, apesar de colocar <#8cffff>{0}</color> balas.\nSeu tempo de recarga de morte foi reduzido em <#8cff>{1}s</color>!</color>",
   "RG.Suffix": "<#00ffa5>Marcadores:</color> <b>{0}</b>",
@@ -4405,7 +4516,7 @@
   "MainMenu.SettingsButton": "Configurações",
   "MainMenu.InventoryButton": "Inventário",
   "MainMenu.CreditsButton": "Créditos",
-  "MainMenu.QuitButton": "Sair",
+  "MainMenu.ExitGameButton": "Sair",
   "Abyssbringer": "Vácuo",
   "AbyssbringerInfo": "Posicione buracos negros pelo mapa",
   "AbyssbringerInfoLong": "(Impostores):\nComo Vácuo, você pode posicionar buracos negros pelo mapa. Buracos negros vão sugar e matar jogadores que colidirem com eles.",
