More Natural Disasters settings

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4043,6 +4043,14 @@
   "ModeDescribe.NaturalDisasters": "In the Natural Disasters gamemode, the map is filled with natural disasters. You have to survive them all and be the last player alive to win!<size=80%>\\n\\nList of all Natural Disasters and their effects:</size><size=70%>\\n- Earthquake: The ground shakes, making it hard to move.\\n- Meteor: A meteor falls from the sky, killing players in a certain range.\\n- Volcano Eruption: Lava flows from one spot, killing players.\\n- Tornado: Players are sucked into the tornado and die.\\n- Thunderstorm: Lightning strikes outside of rooms, killing players that it hits.\\n- Sandstorm: Sand blows, making it hard to see.\\n- Tsunami: A giant wave comes moving in a specific direction, drowning players that are on the way.\\n- Sinkhole: The ground collapses, killing players in range and any players that enter this range in the future.\\n- Building Collapse: A building on the ship collapses, killing everyone inside it. Collapsed rooms cannot be entered in the future.</size>",
   "ND_DisasterFrequency": "Disaster Frequency",
   "ND_DisasterWarningTime": "Disaster Warning Time",
+  "ND_LimitMaximumDisastersAtOnce": "Limit Maximum Active Disasters at Once",
+  "ND_MaximumDisastersAtOnce": "Maximum Active Disasters at Once",
+  "ND_WhenLimitIsReached": "When the Limit is Reached",
+  "ND_LimitReachedOptions.OnlySpawnInstantDisasters": "Only Spawn Instant Disasters",
+  "ND_LimitReachedOptions.RemoveRandom": "Remove Random Disaster",
+  "ND_LimitReachedOptions.RemoveOldest": "Remove Oldest Disaster",
+  "ND_PreferRemovingThunderstorm": "Prefer Removing Thunderstorms",
+  "ND_Disaster.SpawnChance": "{disaster} Spawn Chance",
   "ND_Earthquake.DurationOpt": "Earthquake Duration",
   "ND_Earthquake.Speed": "Speed of Players Near Earthquakes",
   "ND_VolcanoEruption.FlowStepDelay": "Delay Between Lava Flowing Steps",
