--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2229,6 +2229,8 @@
   "CommandDescription.Note": "Manage your notes as the Journalist",
   "CommandDescription.OS": "Set the spawn chance of a role",
   "CommandDescription.Negotiation": "Pick your negotiation method when asked by the Negotiator",
+  "CommandDescription.Mute": "Mute someone. Muted players can't chat. Everyone is unmuted on game start.",
+  "CommandDescription.Unmute": "Unmute someone.",
   "CommandArgs.ChangeSetting.Name": "The setting's name to change (leave blank to view all settings)",
   "CommandArgs.ChangeSetting.UnknownValue": "(leave blank to view what to put here)",
   "CommandArgs.Rename.Name": "Your new name",
@@ -2291,6 +2293,9 @@
   "CommandArgs.OS.Chance": "The spawn chance for the role",
   "CommandArgs.OS.Role": "The role to set the spawn chance for",
   "CommandArgs.Negotiation.Number": "The index of the picked negotiation method (0/1/2/3)",
+  "CommandArgs.Mute.Id": "The player's ID to mute",
+  "CommandArgs.Mute.Duration": "The duration in seconds (leaving blank => 60s)",
+  "CommandArgs.Unmute.Id": "The player's ID to unmute",
   "Commands.ChangeSettingHelp": "<b><u>Arguments:</u></b><size=70%>\\n- map (theskeld/mirahq/polus/dlekseht/airship/thefungle/custom)\\n- impostors (number)\\n- players (number)\\n- recommended (on/off)\\n- confirmejects (on/off)\\n- emergencymeetings (number)\\n- anonymousvotes (on/off)\\n- emergencycooldown (number)\\n- discussiontime (number)\\n- votingtime (number)\\n- playerspeed (float)\\n- crewmatevision (float)\\n- impostorvision (float)\\n- killcooldown (float)\\n- killdistance (short/medium/long/custom)\\n- taskbarupdates (always/meetings/never)\\n- visualtasks (on/off)\\n- commontasks (number)\\n- longtasks (number)\\n- shorttasks (number)\\n- scientistcount (number)\\n- scientistchance (number)\\n- vitalsdisplaycooldown (float)\\n- batteryduration (float)\\n- engineercount (number)\\n- engineerchance (number)\\n- ventusecooldown (float)\\n- maxtimeinvents (float)\\n- guardianangelcount (number)\\n- guardianangelchance (number)\\n- protectcooldown (float)\\n- protectduration (float)\\n- protectvisibletoimpostors (on/off)\\n- shapeshiftercount (number)\\n- shapeshifterchance (number)\\n- shapeshiftduration (float)\\n- shapeshiftcooldown (float)\\n- leaveshapeshiftevidence (on/off)\\n- phantomcount (number)\\n- phantomchance (number)\\n- inviscooldown (float)\\n- invisduration (float)\\n- noisemakercount (number)\\n- noisemakerchance (number)\\n- noisemakerimpostoralert (on/off)\\n- noisemakeralertduration (number)\\n- trackercount (number)\\n- trackerchance (number)\\n- trackduration (float)\\n- trackcooldown (float)\\n- trackdelay (float)\\n- ghostdotasks (on/off)\\n\\n<u><b>Notes:</b></u>\\n1. Upper and lowercase matters\\n2. Where it says custom, you obviously put a number argument after it\\n3. A float is a single precision floating number, like 1.7\\n4. \"ghostdotasks\" causes issues if you set it\\n5. Example uses:\\n   - \"/cs map polus\"\\n   - \"/cs killdistance custom 4\"\\n   - \"/cs trackdelay 1,7\"\\n   - \"/cs confirmejects on\"",
   "PollResultTitle": "Poll Results",
   "Poll.Title": "<#ff0000>➡ POLL ⬅</color>",
@@ -2303,6 +2308,12 @@
   "Poll.VotingInfo": "Use /pv {answer} to vote, answer can be a character or a number.",
   "Poll.YouVoted": "You have voted for {0}, which has now {1} votes.",
   "PollUsage": "Format:\\n<size=80%><b>/poll {Question}? <size=55%>{Answer A} {Answer B} \n[Answer C] [Answer D] [Answer E]</size></b></size>\n\n<size=50%>Note: The question should always end with a question mark (?)!</size>",
+  "PlayerMuted": "You've successfully muted {0} for <#00ffa5>{1}</color> seconds.",
+  "YouMuted": "<#ffff00>You've been muted by <u>{0}</u> for <#ff0000>{1}</color> seconds.",
+  "ModeratorMuted": "Moderator {0} has muted {1} for <#00ffa5>{2}</color> seconds.",
+  "PlayerUnmuted": "You've successfully unmuted {0}.",
+  "YouUnmuted": "{0} has unmuted you.",
+  "MuteMessage": "<#ff0000>You're muted and cannot send messages. The mute will expire in <#ffff00>{0}</color> seconds.</color>",
   "ThankYouForUsingEHR": "Thank you for using EHR!",
   "LoadingHint.0": "Did you know?\nYou can put roles of your choice into custom teams!\nView instructions on our website (link on main menu)!",
   "LoadingHint.1": "Did you know?\nYou can force or ban certain role and add-on combos using /combo in lobby!\nGive it a try after this game!",
