--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1861,6 +1861,15 @@
   "Gaslighter.Knight": "In this round, you <#ffa500>knight players</color>",
   "Gaslighter.Curse": "In this round, you <#ff00ff>curse players</color>",
   "Gaslighter.Shield": "In this round, you <#00ff97>shield players</color>",
+  "Technician": "Technician",
+  "TechnicianInfo": "Fix sabotages",
+  "TechnicianInfoLong": "(Neutrals):\\nAs the Technician, you must fix a certain number of sabotages to win. Depending on settings, you may be a able to vent, and you may win alone or with the winning team if your objective is completed. You may get fewer or more points for certain sabotages.",
+  "Technician.WinsAlone": "Wins Alone",
+  "Technician.RequiredPoints": "Required Points to Win",
+  "Technician.PointGain.Electrical": "Points gained for fixing Lights",
+  "Technician.PointGain.Comms": "Points gained for fixing Comms",
+  "Technician.PointGain.LifeSupp": "Points gained for fixing O2",
+  "Technician.PointGain.Reactor": "Points gained for fixing Reactor",
   "Speedrunner": "Speedrunner",
   "SpeedrunnerInfo": "Crew wins if you finish your tasks",
   "SpeedrunnerInfoLong": "(Crewmates):\\nWhen you complete all of your tasks (and you're still alive), the game instantly ends and everyone on the crewmate team will win.",
